--- a/signup.html
+++ b/signup.html
@@ -27,9 +27,9 @@
             <a href="index.html" onclick="menu()">Home</a>
             <a href="#" onclick="menu()">Reservations</a>
             <a href="index.html#contact" onclick="menu()">Contact us</a>
-            <a href="signup.html" onclick="menu()">
-                <button class="btn-primary">Sign up</button>
-            </a>
+<!--            <a href="signup.html" onclick="menu()">-->
+<!--                <button class="btn-primary">Sign up</button>-->
+<!--            </a>-->
         </div>
         <div class="menu" onclick="menu()">
             <i class="uil uil-align-center-alt"></i>
@@ -118,21 +118,21 @@
             <div class="ask">
                 <p>Already have an account? <a href="login.html">Login</a></p>
             </div>
-            <div class="social-login-main">
-                <center>
-                    <h1>Or, signup with</h1>
-                </center>
-                <div class="social-login">
-                    <button class="s-btn">
-                        <img alt="" src="assets/images/google.svg"/>
-                        Google
-                    </button>
-                    <button class="s-btn">
-                        <img alt="" src="assets/images/fb.svg"/>
-                        Facebook
-                    </button>
-                </div>
-            </div>
+<!--            <div class="social-login-main">-->
+<!--                <center>-->
+<!--                    <h1>Or, signup with</h1>-->
+<!--                </center>-->
+<!--                <div class="social-login">-->
+<!--                    <button class="s-btn">-->
+<!--                        <img alt="" src="assets/images/google.svg"/>-->
+<!--                        Google-->
+<!--                    </button>-->
+<!--                    <button class="s-btn">-->
+<!--                        <img alt="" src="assets/images/fb.svg"/>-->
+<!--                        Facebook-->
+<!--                    </button>-->
+<!--                </div>-->
+<!--            </div>-->
         </form>
     </div>
 </section>
