--- a/index.html
+++ b/index.html
@@ -199,6 +199,37 @@
         </div>
     </div>
 </section>
+<section class="sp">
+    <div class="container">
+        <h1 class="title">Featured Routes</h1>
+        <div class="card-wraper1">
+            <div class="card">
+                <div class="body">
+                    <h1>Cubao to Baguio via Joybus / Genesis Transport
+                    </h1>
+                </div>
+            </div>
+            <div class="card">
+                <div class="body">
+                    <h1>Cubao to Baler via Joybus / Genesis Transport
+                    </h1>
+                </div>
+            </div>
+            <div class="card">
+                <div class="body">
+                    <h1>Sampaloc, Manila to Laoag via Fariñas Trans
+                    </h1>
+                </div>
+            </div>
+            <div class="card">
+                <div class="body">
+                    <h1>Sampaloc, Manila to Tuguegarao via GV Florida
+                    </h1>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <!-- who we are -->
 <section class="sp">
     <div class="container">
