--- a/booking.html
+++ b/booking.html
@@ -6,7 +6,7 @@
     <!-- link css -->
     <link href="assets/css/style.min.css" rel="stylesheet"/>
     <link href="assets/css/form.min.css" rel="stylesheet"/>
-    <link href="assets/css/booking.min.css" rel="stylesheet"/>
+    <link href="assets/css/booking.css" rel="stylesheet"/>
     <link href="assets/css/buss.min.css" rel="stylesheet"/>
     <link href="assets/swal/sweetalert2.min.css" rel="stylesheet"/>
 
