--- a/index.html
+++ b/index.html
@@ -492,15 +492,15 @@
           <div class="row">
             <div class="fild">
               <i class="uil uil-user"></i>
-              <input name="name" placeholder="Name" type="text" />
+              <input name="name" placeholder="Name" type="text"  required/>
             </div>
             <div class="fild">
               <i class="uil uil-envelope"></i>
-              <input name="email" placeholder="Email" type="email" />
+              <input name="email" placeholder="Email" type="email" required />
             </div>
           </div>
           <textarea
-            id=""
+            id="" required
             name="message"
             placeholder="Type your message...."
           ></textarea>
