--- a/signup.html
+++ b/signup.html
@@ -20,13 +20,13 @@
 <body>
 <header>
     <div class="container-max">
-        <div class="logo" onclick="window.open('index.html', '_self')">
+        <div class="logo" onclick="window.open('./', '_self')">
             <img alt="" src="assets/images/logo-black.png"/>
         </div>
         <div class="links">
-            <a href="index.html" onclick="menu()">Home</a>
+            <a href="./" onclick="menu()">Home</a>
             <a href="#" onclick="menu()">Reservations</a>
-            <a href="index.html#contact" onclick="menu()">Contact us</a>
+            <a href="./#contact" onclick="menu()">Contact us</a>
 <!--            <a href="signup.html" onclick="menu()">-->
 <!--                <button class="btn-primary">Sign up</button>-->
 <!--            </a>-->
