--- a/user-admin.html
+++ b/user-admin.html
@@ -21,13 +21,13 @@
 <body>
 <header>
     <div class="container-max">
-        <div class="logo" onclick="window.open('index.html', '_self')">
+        <div class="logo" onclick="window.open('./', '_self')">
             <img alt="" src="assets/images/logo-black.png"/>
         </div>
         <div class="links">
-            <a href="index.html" onclick="menu()">Home</a>
+            <a href="./" onclick="menu()">Home</a>
             <a href="#" onclick="menu()">About</a>
-            <a href="index.html#contact" onclick="menu()">Contact us</a>
+            <a href="./#contact" onclick="menu()">Contact us</a>
             <div class="status">
             </div>
         </div>
